<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/profile"
        android:title="@string/my_account"
        android:icon="@drawable/profile">
    </item>

    <item
        android:id="@+id/add"
        android:title="@string/upload"
        android:icon="@drawable/upload">
    </item>

    <item
        android:id="@+id/lost"
        android:title="@string/lost"
        android:icon="@drawable/lostl">
    </item>

    <item
        android:id="@+id/found_side_nav"
        android:title="@string/found"
        android:icon="@drawable/found">
    </item>

    <item
        android:id="@+id/contact"
        android:title="Contact Us"
        android:icon="@drawable/contact">
    </item>

    <item
        android:id="@+id/rate"
        android:title="Rate Us"
        android:icon="@drawable/rate">
    </item>

</menu>