<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    tools:context=".fragments.GetInFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:cardElevation="7dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_login_to_continue_to_your_profile"
        android:textSize="24sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal">
    </TextView>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_phone_no">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:id="@+id/edt_email_phn"/>

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>



        <Button
            android:id="@+id/send_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="50dp"
            android:text="@string/send_verification_code" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutVerify"
        android:visibility="gone"
        android:orientation="vertical">

        <com.chaos.view.PinView
            android:id="@+id/VerifyPin"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:cursorVisible="true"
            android:hint="@string/enter_code"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cursorColor="@color/black"
            app:cursorWidth="2dp"
            app:hideLineWhenFilled="true"
            app:itemCount="6"
            app:itemHeight="48dp"
            app:itemRadius="4dp"
            app:itemSpacing="0dp"
            app:itemWidth="48dp"
            app:lineColor="@color/black"
            app:lineWidth="2dp"
            app:viewType="rectangle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:text="@string/didn_t_got_code_resend"
            android:textColor="@color/common_google_signin_btn_text_light"
            android:textStyle="italic">

        </TextView>

        <Button
            android:id="@+id/btn_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify">

        </Button>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:visibility="gone"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verifying"
        android:id="@+id/txt_pbar"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"


        />
</LinearLayout>