<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/header_cover_image"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/finder_cover" />

        <ImageButton
            android:id="@+id/user_profile_photo"
            android:layout_width="150dp"
            android:layout_height="160dp"
            android:layout_below="@+id/header_cover_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-60dp"
            android:elevation="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profile" />

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_cover_image"
            android:background="@color/teal"
            android:elevation="4dp"
            android:paddingBottom="24dp">


            <TextView
                android:id="@+id/user_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:text="@string/name"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_profile_phn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_profile_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:text=""
                android:textColor="#fff"
                android:textSize="14sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_layout"
            android:weightSum="3"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/options_layout"
                android:layout_weight="1"
                app:cardElevation="2dp"
                android:foreground="?attr/selectableItemBackground"
                app:cardBackgroundColor="@color/white"
                android:layout_gravity="center_horizontal"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="italic"
                        android:textSize="25sp"
                        android:layout_margin="10dp"
                        android:text="@string/edit_personal_information_s"
                        android:layout_weight="1">

                    </TextView>
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:background="#fff"
                            android:clickable="true"
                            android:elevation="4dp"
                            android:padding="20dp"
                            android:text="@string/edit_name"
                            android:textStyle="bold"
                            android:textColor="@color/teal"
                            android:focusable="true" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_margin="5dp"
                            android:layout_marginBottom="3dp"
                            android:layout_marginTop="3dp"
                            android:background="#fff"
                            android:clickable="true"
                            android:elevation="4dp"
                            android:padding="20dp"
                            android:text="@string/change_profile_image"
                            android:textStyle="bold"
                            android:textColor="@color/teal"
                            android:focusable="true" />


                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardElevation="2dp"
                android:foreground="?attr/selectableItemBackground"
                app:cardBackgroundColor="@color/white"
                android:layout_gravity="center_horizontal"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="italic"
                        android:textSize="25sp"
                        android:layout_margin="10dp"
                        android:text="@string/upload_data"
                        android:layout_weight="1">

                    </TextView>
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_upldprsnData"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:background="#fff"
                            android:clickable="true"
                            android:elevation="4dp"
                            android:padding="20dp"
                            android:text="@string/person"
                            android:textStyle="bold"
                            android:textColor="@color/teal"
                            android:focusable="true" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_upldVhclData"
                            android:layout_weight="1"
                            android:layout_margin="5dp"
                            android:layout_marginBottom="3dp"
                            android:layout_marginTop="3dp"
                            android:background="#fff"
                            android:clickable="true"
                            android:elevation="4dp"
                            android:padding="20dp"
                            android:text="@string/vehicle"
                            android:textStyle="bold"
                            android:textColor="@color/teal"
                            android:focusable="true" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardElevation="2dp"
                android:foreground="?attr/selectableItemBackground"
                app:cardBackgroundColor="@color/white"
                android:layout_gravity="center_horizontal"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="italic"
                        android:textSize="25sp"
                        android:layout_margin="10dp"
                        android:text="@string/search_data"
                        android:layout_weight="1">

                    </TextView>
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:background="#fff"
                            android:clickable="true"
                            android:elevation="4dp"
                            android:padding="20dp"
                            android:text="@string/by_date"
                            android:textStyle="bold"
                            android:textColor="@color/teal"
                            android:focusable="true" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_margin="5dp"
                            android:layout_marginBottom="3dp"
                            android:layout_marginTop="3dp"
                            android:background="#fff"
                            android:clickable="true"
                            android:elevation="4dp"
                            android:padding="20dp"
                            android:text="@string/by_name"
                            android:textStyle="bold"
                            android:textColor="@color/teal"
                            android:focusable="true" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </RelativeLayout>
</ScrollView>